# meltano-kubernetes-ext

./: README.md  pyproject.toml
kubernetes_ext/: __init__.py  extension.py  main.py
kubernetes_ext/templates/: config-map.yml.jinja  cron-job.yml.jinja  kustomization.yml.jinja  overlay.yml.jinja  resources.yml.jinja
